@@ -450,8 +450,7 @@ req_send(dns_request_t *request, isc_task_t *task,
 	request->flags |= DNS_REQUEST_F_SENDING;
 	result = isc_socket_sendto2(sock, &r, task, address, NULL,
 				    sendevent, 0);
-	if (result != ISC_R_SUCCESS)
-		request->flags &= ~DNS_REQUEST_F_SENDING;
+	INSIST(result == ISC_R_SUCCESS);
 	return (result);
 }
 
